--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 
 .page-container {
     display: flex;
-    position: relative;
     flex-direction: column;
     min-height: 100vh;
 }
@@ -14,62 +13,39 @@ body {
 .header-container {
     position: fixed;
     display: flex;
-    width: 92%;
-    padding: 10px 0;
-    background-color: #ffffff;
     justify-content: center;
     align-items: center;
+    width: calc(100% - 40px);
+    padding: 10px;
+    background-color: #ffffff;
     height: 60px;
-
-    border-style: solid;
-    border-width: 3px;
+    border: 3px solid;
     border-radius: 10px;
     box-shadow: 10px 5px 5px #000000;
-    /*
-      TODO: margin-right funktioniert nicht
-    */
-    margin-top: 5px;
-    margin-right: 20px;
-    margin-left: 20px;
-}
-
-
-.header {
-    padding: 10px 0;
-    background-color: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-}
-
-main {
-    flex-grow: 1;
-    padding-top: 70px;
-    padding-bottom: 70px;
+    top: 10px;
+    left: 20px;
 }
 
 .footer-container {
     position: fixed;
     display: flex;
-    bottom: 0;
-    width: 92%;
-    padding: 10px 0;
-    background-color: #ffffff;
     justify-content: center;
     align-items: center;
+    width: calc(100% - 40px);
+    padding: 10px;
+    background-color: #ffffff;
     height: 60px;
-
-    border-style: solid;
-    border-width: 3px;
+    border: 3px solid;
     border-radius: 10px;
-    box-shadow: 10px 5px 5px black;
-    /*
-      TODO: margin right  funktioniert nicht
-    */
-    margin-bottom: 5px;
-    margin-right: 20px;
-    margin-left: 20px;
+    box-shadow: 10px 5px 5px #000000;
+    bottom: 10px;
+    left: 20px;
+}
+
+main {
+    flex-grow: 1;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .footer {
@@ -95,10 +71,49 @@ h3 {
     color: #000000;
 }
 
-iframe{
-    margin: 0;
-    padding: 0;
+iframe {
+    position: absolute;
     border: none;
-    width: 100%;
-    height: 810px;
+    top: 70px;
+    left: 20px;
+    right: 20px;
+    bottom: 70px;
+    width: calc(100% - 40px);
+    height: calc(100% - 140px);
+    min-height: 300px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .header-container,
+    .footer-container {
+        width: calc(100% - 40px);
+    }
+
+    .footer {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .footer li {
+        margin: 0 10px;
+    }
+
+    iframe {
+        height: calc(100% - 140px);
+    }
+}
+
+@media (max-width: 480px) {
+    h3 {
+        font-size: 1.5em;
+    }
+
+    .footer a {
+        font-size: 0.9em;
+    }
+
+    iframe {
+        min-height: 200px;
+    }
 }
