--- a/login/style.css
+++ b/login/style.css
@@ -1,135 +1,76 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 body{
-  min-height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
-  background: #f0faff;
-}
-
-.wrapper{
-  position: relative;
-  max-width: 470px;
-  width: 100%;
-  border-radius: 12px;
-  padding: 20px 30px 120px;
-  background: #4070f4;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-}
-
-.form.login{
-  position: absolute;
-  left: 50%;
-  bottom: -86%;
-  transform: translateX(-50%);
-  width: calc(100% + 220px);
-  padding: 20px 140px;
-  border-radius: 50%;
-  height: 100%;
-  background: #fff;
-  transition: all 0.6s ease;
-}
-
-.wrapper.active .form.login{
-  bottom: -15%;
-  border-radius: 35%;
-  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
-}
-
-.form header{
-  font-size: 30px;
-  text-align: center;
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.form.login header{
-  color: #333;
-  opacity: 0.6;
-}
-
-.wrapper.active .form.login header{
-  opacity: 1;
-}
-
-.wrapper.active .signup header{
-  opacity: 0.6;
-}
-
-.wrapper form{
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: 40px;
-}
-
-form input{
-  height: 60px;
-  outline: none;
-  border: none;
-  padding: 0 15px;
-  font-size: 16px;
-  font-weight: 400;
-  color: #333;
-  border-radius: 8px;
-  background: #fff;
-}
-
-.form.login input{
-  border: 1px solid #aaa;
-}
-
-.form.login input:focus{
-  box-shadow: 0
-    1px 0 #ddd;
-}
-
-form .checkbox{
-  display: flex;
   align-items: center;
-  gap: 10px;
+  min-height: 100vh;
+  background: rgba(0, 255, 255, 0.3);
 }
 
-.checkbox input[type="checkbox"]{
-  height: 16px;
-  width: 16px;
-  accent-color: #fff;
-  cursor: pointer;
-}
-
-form .checkbox label{
-  cursor: pointer;
-  color: #fff;
-}
-
-form a{
+.container{
+  width: 90;
+  max-width: 400px;
+  padding: 30px 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
   color: #333;
-  text-decoration: none;
+  text-align: center;
+  display: none;
 }
 
-form a:hover{
-  text-decoration: underline;
+.login-container{
+  display: block;
 }
 
-form input[type="submit"]{
-  margin-top: 15px;
-  padding: none;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
+.container h1{
+  font-size: 2rem;
+  color: aqua;
+  margin-bottom: 20px;
 }
 
-.form.login input[type="submit"]{
-  background: #4070f4;
-  color: #fff;
+.container input[type="text"], .container input[type="password"], .container input[type="email"]{
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 100px;
+  font-size: 1rem;
+}
+
+.container button{
+  width: 100%;
+  padding: 15px;
+  margin-top: 20px;
+  background-color: #1877f2;
   border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3 ease;
+}
+
+.container button:hover{
+  background-color: #145dbf;
+}
+
+.forgot-password{
+  display: block;
+  margin: 20px 0;
+  color: #1877f2;
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: color 0.3 ease;
+}
+
+.forgot-password:hover{
+  color: #145dbf;
 }
