--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     align-items: center;
     width: calc(100% - 40px);
     padding: 10px;
-    background-color: #ffffff;
+    background-color: rgba(0, 255, 255, 0.3);
     height: 60px;
     border: 3px solid;
     border-radius: 10px;
@@ -33,7 +33,7 @@ body {
     align-items: center;
     width: calc(100% - 40px);
     padding: 10px;
-    background-color: #ffffff;
+    background-color: rgba(0, 255, 255, 0.3);
     height: 60px;
     border: 3px solid;
     border-radius: 10px;
