--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 body{
     font-family: Arial, sans-serif;
     margin: 0;
-    height: 100vh;
     background: #e4e9f7;
+    height: 90dvh;
 }
 
 .wrapper{
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: calc(90 - 10px);
     padding-bottom: 10px;
 }
 
@@ -26,7 +25,7 @@ body{
     align-items: center;
     justify-content: center;
     bottom: 0;
-    padding: 5px;
+    padding: 10px;
 }
 
 .box{
