--- a/css/lehrer.css
+++ b/css/lehrer.css
@@ -1,21 +1,22 @@
-.list-top{
+body{
+    min-width: 400px;
+}
+
+.scoreboard{
     background: #fdfdfd;
-    display: flex;
     align-items: center;
+    justify-content: center;
     padding: 5;
     border-radius: 10px;
     box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1), 0;
     margin-top: 5px;
+    width: 100%;
+    display: table;
 }
 
-.list{
-    background: #fdfdfd;
-    display: flex;
-    align-items: center;
-    padding: 5px;
-    border-radius: 20px;
-    box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1), 0;
-    margin-top: -1px;
+.scoreboard th, .scoreboard td{
+    padding: 10px;
+    text-align: center;
 }
 
 .erstellen{
